--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,7 @@ dependencies = [
     "requests>=2.32.3",
     "sqlalchemy>=2.0.41",
     "telegram>=0.0.1",
-    "werkzeug>=3.1.3",
+    "werkzeug==2.3.7",
+    "quart>=0.18.0",
+    "hypercorn>=0.14.4",  
 ]
