--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ woocommerce
 requests
 gunicorn
 aiogram[fast]
-quart
 quart-sqlalchemy
 uvloop==0.17.0
 werkzeug==2.3.7
+quart>=0.18.0
+hypercorn>=0.14.4
