--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,11 @@
 python-telegram-bot==20.7
-Flask-Migrate
-flask
+quart==0.19.4
+quart-sqlalchemy
+hypercorn==0.14.4
+werkzeug==2.3.7
+uvloop==0.17.0
 python-dotenv
 openai
 woocommerce
 requests
-gunicorn
-aiogram
-quart==0.19.4
-quart-sqlalchemy
-uvloop==0.17.0
-werkzeug==2.3.7
-hypercorn==0.14.4
+aiogram==3.4.1
